// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemRating /> should render with props 1`] = `
<ItemRating
  reviewsCount={3}
  value={2}
>
  <Box
    alignItems="center"
    direction="row"
    display="flex"
    marginTop={0}
  >
    <div
      className="display-flex direction-row align-items-center M-t__0"
    >
      <Rating
        value={2}
      >
        <div
          className="rating"
        >
          <SvgStar
            className="rating-star empty-star"
            height={16}
            key="5"
            onClick={[Function]}
            width={16}
          >
            <svg
              className="rating-star empty-star"
              height={16}
              onClick={[Function]}
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.304 1.318a.75.75 0 011.392 0l2.567 6.393 6.862.466c.686.046.96.89.442 1.324l-5.287 4.417 1.68 6.681a.75.75 0 01-1.125.818L11 17.754l-5.835 3.663A.75.75 0 014.04 20.6l1.681-6.681L.433 9.501a.75.75 0 01.43-1.324l6.874-.466 2.567-6.393z"
                data-star-type="full"
              />
              <path
                d="M10.543 0a.746.746 0 00-.239.318L7.737 6.711l-6.874.466a.75.75 0 00-.43 1.324l5.287 4.417-1.68 6.681a.75.75 0 001.125.818L11 16.754V0h-.457z"
                data-star-type="half"
              />
            </svg>
          </SvgStar>
          <SvgStar
            className="rating-star empty-star"
            height={16}
            key="4"
            onClick={[Function]}
            width={16}
          >
            <svg
              className="rating-star empty-star"
              height={16}
              onClick={[Function]}
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.304 1.318a.75.75 0 011.392 0l2.567 6.393 6.862.466c.686.046.96.89.442 1.324l-5.287 4.417 1.68 6.681a.75.75 0 01-1.125.818L11 17.754l-5.835 3.663A.75.75 0 014.04 20.6l1.681-6.681L.433 9.501a.75.75 0 01.43-1.324l6.874-.466 2.567-6.393z"
                data-star-type="full"
              />
              <path
                d="M10.543 0a.746.746 0 00-.239.318L7.737 6.711l-6.874.466a.75.75 0 00-.43 1.324l5.287 4.417-1.68 6.681a.75.75 0 001.125.818L11 16.754V0h-.457z"
                data-star-type="half"
              />
            </svg>
          </SvgStar>
          <SvgStar
            className="rating-star empty-star"
            height={16}
            key="3"
            onClick={[Function]}
            width={16}
          >
            <svg
              className="rating-star empty-star"
              height={16}
              onClick={[Function]}
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.304 1.318a.75.75 0 011.392 0l2.567 6.393 6.862.466c.686.046.96.89.442 1.324l-5.287 4.417 1.68 6.681a.75.75 0 01-1.125.818L11 17.754l-5.835 3.663A.75.75 0 014.04 20.6l1.681-6.681L.433 9.501a.75.75 0 01.43-1.324l6.874-.466 2.567-6.393z"
                data-star-type="full"
              />
              <path
                d="M10.543 0a.746.746 0 00-.239.318L7.737 6.711l-6.874.466a.75.75 0 00-.43 1.324l5.287 4.417-1.68 6.681a.75.75 0 001.125.818L11 16.754V0h-.457z"
                data-star-type="half"
              />
            </svg>
          </SvgStar>
          <SvgStar
            className="rating-star full-star"
            height={16}
            key="2"
            onClick={[Function]}
            width={16}
          >
            <svg
              className="rating-star full-star"
              height={16}
              onClick={[Function]}
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.304 1.318a.75.75 0 011.392 0l2.567 6.393 6.862.466c.686.046.96.89.442 1.324l-5.287 4.417 1.68 6.681a.75.75 0 01-1.125.818L11 17.754l-5.835 3.663A.75.75 0 014.04 20.6l1.681-6.681L.433 9.501a.75.75 0 01.43-1.324l6.874-.466 2.567-6.393z"
                data-star-type="full"
              />
              <path
                d="M10.543 0a.746.746 0 00-.239.318L7.737 6.711l-6.874.466a.75.75 0 00-.43 1.324l5.287 4.417-1.68 6.681a.75.75 0 001.125.818L11 16.754V0h-.457z"
                data-star-type="half"
              />
            </svg>
          </SvgStar>
          <SvgStar
            className="rating-star full-star"
            height={16}
            key="1"
            onClick={[Function]}
            width={16}
          >
            <svg
              className="rating-star full-star"
              height={16}
              onClick={[Function]}
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.304 1.318a.75.75 0 011.392 0l2.567 6.393 6.862.466c.686.046.96.89.442 1.324l-5.287 4.417 1.68 6.681a.75.75 0 01-1.125.818L11 17.754l-5.835 3.663A.75.75 0 014.04 20.6l1.681-6.681L.433 9.501a.75.75 0 01.43-1.324l6.874-.466 2.567-6.393z"
                data-star-type="full"
              />
              <path
                d="M10.543 0a.746.746 0 00-.239.318L7.737 6.711l-6.874.466a.75.75 0 00-.43 1.324l5.287 4.417-1.68 6.681a.75.75 0 001.125.818L11 16.754V0h-.457z"
                data-star-type="half"
              />
            </svg>
          </SvgStar>
        </div>
      </Rating>
      <Box
        dangerouslySetInlineStyle={
          Object {
            "__style": Object {
              "paddingBottom": "2px",
            },
          }
        }
        marginLeft={2}
      >
        <div
          className="M-l__2"
          style={
            Object {
              "paddingBottom": "2px",
            }
          }
        >
          <ForwardRef(Text)
            color="gray38"
            size={12}
          >
            <span
              className="size-12 line-height-16 color__gray38"
            >
              3
            </span>
          </ForwardRef(Text)>
        </div>
      </Box>
    </div>
  </Box>
</ItemRating>
`;

exports[`<ItemRating /> should render without props 1`] = `
<ItemRating>
  <Box
    alignItems="center"
    direction="row"
    display="flex"
    marginTop={0}
  >
    <div
      className="display-flex direction-row align-items-center M-t__0"
    >
      <Rating
        value={0}
      >
        <div
          className="rating"
        >
          <SvgStar
            className="rating-star empty-star"
            height={16}
            key="5"
            onClick={[Function]}
            width={16}
          >
            <svg
              className="rating-star empty-star"
              height={16}
              onClick={[Function]}
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.304 1.318a.75.75 0 011.392 0l2.567 6.393 6.862.466c.686.046.96.89.442 1.324l-5.287 4.417 1.68 6.681a.75.75 0 01-1.125.818L11 17.754l-5.835 3.663A.75.75 0 014.04 20.6l1.681-6.681L.433 9.501a.75.75 0 01.43-1.324l6.874-.466 2.567-6.393z"
                data-star-type="full"
              />
              <path
                d="M10.543 0a.746.746 0 00-.239.318L7.737 6.711l-6.874.466a.75.75 0 00-.43 1.324l5.287 4.417-1.68 6.681a.75.75 0 001.125.818L11 16.754V0h-.457z"
                data-star-type="half"
              />
            </svg>
          </SvgStar>
          <SvgStar
            className="rating-star empty-star"
            height={16}
            key="4"
            onClick={[Function]}
            width={16}
          >
            <svg
              className="rating-star empty-star"
              height={16}
              onClick={[Function]}
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.304 1.318a.75.75 0 011.392 0l2.567 6.393 6.862.466c.686.046.96.89.442 1.324l-5.287 4.417 1.68 6.681a.75.75 0 01-1.125.818L11 17.754l-5.835 3.663A.75.75 0 014.04 20.6l1.681-6.681L.433 9.501a.75.75 0 01.43-1.324l6.874-.466 2.567-6.393z"
                data-star-type="full"
              />
              <path
                d="M10.543 0a.746.746 0 00-.239.318L7.737 6.711l-6.874.466a.75.75 0 00-.43 1.324l5.287 4.417-1.68 6.681a.75.75 0 001.125.818L11 16.754V0h-.457z"
                data-star-type="half"
              />
            </svg>
          </SvgStar>
          <SvgStar
            className="rating-star empty-star"
            height={16}
            key="3"
            onClick={[Function]}
            width={16}
          >
            <svg
              className="rating-star empty-star"
              height={16}
              onClick={[Function]}
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.304 1.318a.75.75 0 011.392 0l2.567 6.393 6.862.466c.686.046.96.89.442 1.324l-5.287 4.417 1.68 6.681a.75.75 0 01-1.125.818L11 17.754l-5.835 3.663A.75.75 0 014.04 20.6l1.681-6.681L.433 9.501a.75.75 0 01.43-1.324l6.874-.466 2.567-6.393z"
                data-star-type="full"
              />
              <path
                d="M10.543 0a.746.746 0 00-.239.318L7.737 6.711l-6.874.466a.75.75 0 00-.43 1.324l5.287 4.417-1.68 6.681a.75.75 0 001.125.818L11 16.754V0h-.457z"
                data-star-type="half"
              />
            </svg>
          </SvgStar>
          <SvgStar
            className="rating-star empty-star"
            height={16}
            key="2"
            onClick={[Function]}
            width={16}
          >
            <svg
              className="rating-star empty-star"
              height={16}
              onClick={[Function]}
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.304 1.318a.75.75 0 011.392 0l2.567 6.393 6.862.466c.686.046.96.89.442 1.324l-5.287 4.417 1.68 6.681a.75.75 0 01-1.125.818L11 17.754l-5.835 3.663A.75.75 0 014.04 20.6l1.681-6.681L.433 9.501a.75.75 0 01.43-1.324l6.874-.466 2.567-6.393z"
                data-star-type="full"
              />
              <path
                d="M10.543 0a.746.746 0 00-.239.318L7.737 6.711l-6.874.466a.75.75 0 00-.43 1.324l5.287 4.417-1.68 6.681a.75.75 0 001.125.818L11 16.754V0h-.457z"
                data-star-type="half"
              />
            </svg>
          </SvgStar>
          <SvgStar
            className="rating-star empty-star"
            height={16}
            key="1"
            onClick={[Function]}
            width={16}
          >
            <svg
              className="rating-star empty-star"
              height={16}
              onClick={[Function]}
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.304 1.318a.75.75 0 011.392 0l2.567 6.393 6.862.466c.686.046.96.89.442 1.324l-5.287 4.417 1.68 6.681a.75.75 0 01-1.125.818L11 17.754l-5.835 3.663A.75.75 0 014.04 20.6l1.681-6.681L.433 9.501a.75.75 0 01.43-1.324l6.874-.466 2.567-6.393z"
                data-star-type="full"
              />
              <path
                d="M10.543 0a.746.746 0 00-.239.318L7.737 6.711l-6.874.466a.75.75 0 00-.43 1.324l5.287 4.417-1.68 6.681a.75.75 0 001.125.818L11 16.754V0h-.457z"
                data-star-type="half"
              />
            </svg>
          </SvgStar>
        </div>
      </Rating>
    </div>
  </Box>
</ItemRating>
`;
